cap nhat view hop thu

--- a/src/resources/views/message.hbs
+++ b/src/resources/views/message.hbs
@@ -31,7 +31,7 @@
                                     </div>
                                 </form>
                                 <h2>
-                                    Inbox (16)
+                                    Hộp thư đến(16)
                                 </h2>
                                 <div class="mail-tools tooltip-demo m-t-md">
                                     <div class="btn-group pull-right">
