chinh sua view cho button dang xuat

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -63,7 +63,7 @@
                     <li class="divider"></li>
                     <li>
                         <div class="text-center link-block">
-                            <a href="mailbox.html">
+                            <a href="/mailbox">
                                 <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
                             </a>
                         </div>
@@ -116,7 +116,7 @@
 
             <li>
                 <form method="POST" action="/auth/logout">
-                    <button type="submit"><i class="fa fa-sign-out"></i> Log out</button>
+                    <button type="submit" class="btn btn-danger block full-width m-b"><i class="fa fa-sign-out"></i> Đăng xuất</button>
                 </form>
             </li>
         </ul>
