--- a/src/resources/views/personnel_edit.hbs
+++ b/src/resources/views/personnel_edit.hbs
@@ -65,6 +65,7 @@
                                             <div class="form-group"><label>Số điện thoại</label> <input type="phone"
                                                     name="phone" class="form-control" value="{{personnelID.phone}}">
                                             </div>
+                                            <div>ngay thang nam sinh : {{personnelID.dob}}</div>
                                             <div class="form-group"><label>Ngày sinh</label> <input type="date"
                                                     name="dob" class="form-control" value="{{personnelID.dob}}"></div>
                                             <div class="form-group"><label>Chức vụ</label>
