--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -3,27 +3,31 @@
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element"> <span>
-                    {{#if (eq existingUser.avatar "")}}
-                        <img alt="image" class="img-circle" width="50px" height="50px" src="/image/Sample_User_Icon.png" />            
-                    {{else}}
+                        {{#if (eq existingUser.avatar "")}}
+                        <img alt="image" class="img-circle" width="50px" height="50px"
+                            src="/image/Sample_User_Icon.png" />
+                        {{else}}
                         <img alt="image" class="img-circle" width="50px" height="50px" src="{{existingUser.avatar}}" />
-                    {{/if}}
+                        {{/if}}
                     </span>
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear"> <span class="block m-t-xs"> <strong
                                     class="font-bold">{{existingUser.name}}</strong>
                             </span>
-                            {{#if (eq existingUser.role "user")}}
-                            <span class="text-muted text-xs block">Quyền: Người dùng<b class="caret"></b></span>
-                            {{/if}}
                             {{#if (eq existingUser.role "admin")}}
-                            <span class="text-muted text-xs block">Quyền: Quản trị<b class="caret"></b></span>
+                                <span class="text-muted text-xs block">Quyền: Quản trị<b class="caret"></b></span>
+                            {{else}}
+                                {{#if (eq existingUser.role "user")}}
+                                    <span class="text-muted text-xs block">Quyền: Người dùng<b class="caret"></b></span>
+                                {{else}}
+                                    <span class="text-muted text-xs block">Quyền: {{existingUser.role}} <b class="caret"></b></span>
+                                {{/if}}
                             {{/if}}
                         </span> </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
                         <li><a href="/profile">Hồ sơ</a></li>
-                        <li><a href="contacts.html">Kết Nối</a></li>
-                        <li><a href="mailbox.html">Hộp thư</a></li>
+                        <li><a href="/mailbox/contact">Kết Nối</a></li>
+                        <li><a href="/mailbox">Hộp thư</a></li>
                         {{!-- <li class="divider"></li> --}}
                         {{!-- <li><a href="login.html">Logout</a></li> --}}
                     </ul>
@@ -38,7 +42,7 @@
             <li>
                 <a href="/concept"><i class="fa fa-picture-o"></i> <span class="nav-label">Concept</span></a>
             </li>
-            {{!-- {{#if (eq existingUser.role "admin")}} --}}
+            {{#if (eq existingUser.role "admin")}}
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Quản trị viên</span><span
                         class="fa arrow"></span></a>
@@ -52,13 +56,13 @@
                     <li><a href="graph_sparkline.html">Doanh thu</a></li>
                 </ul>
             </li>
-            {{!-- {{/if}} --}}
+            {{/if}}
             <li>
                 <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Hộp thư
                     </span><span class="label label-warning pull-right">16/24</span></a>
                 <ul class="nav nav-second-level collapse">
                     <li><a href="/mailbox">Nhắn tin</a></li>
-                    <li><a href="mail_detail.html">Danh bạ</a></li>
+                    <li><a href="/mailbox/contact">Danh bạ</a></li>
                 </ul>
             </li>
             <li>
