tin nhắn đã được lưu vào DB

--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -35,7 +35,7 @@
                                                         style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
                                                 </div>
                                             </td>
-                                            <td class="mail-ontact"><a href="/mailbox/chat">{{this.name}}</a></td>
+                                            <td class="mail-ontact"><a href="/mailbox/chat/{{this._id}}">{{this.name}}</a></td>
                                             <td class="mail-subject">{{this.role}}</td>
                                             <td class=""><i class="fa fa-comment-o"></i></td>
                                             <td class="text-right mail-date">
