--- a/src/resources/views/chat.hbs
+++ b/src/resources/views/chat.hbs
@@ -1,8 +1,4 @@
 <style>
-    .container {
-        padding-top: 10px;
-    }
-
     .chat-container {
         max-width: 800px;
         margin: 0 auto;
@@ -68,10 +64,10 @@
 </style>
 
 <body>
-    <div class="container">
+    <div class=" col-lg-12">
         <div class="chat-container">
             <div class="chat-header">
-                <h4 class="text-center">Trò chuyện với <strong>Người dùng 2</strong></h4>
+                <h4 class="text-center">Trò chuyện với <strong>{{user.name}}</strong></h4>
             </div>
 
             <div class="user-typing" id="typing-status"></div>
@@ -91,9 +87,12 @@
             </div>
 
             <div class="chat-input">
-                <form id="chat-form">
+                <form id="chat-form" action="/mailbox/messages/send" method="POST">
+                    <input type="hidden" name="from" value="{{existingUser._id}}">
+                    <input type="hidden" name="to" value="{{user._id}}">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="message-input" placeholder="Nhập tin nhắn...">
+                        <input type="text" class="form-control" id="message-input" name="content"
+                            placeholder="Nhập tin nhắn...">
                         <span class="input-group-btn">
                             <button class="btn btn-primary" type="submit">Gửi</button>
                         </span>
@@ -102,45 +101,52 @@
             </div>
         </div>
     </div>
-    <!-- jQuery và Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
+<!-- jQuery và Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- websocket.io.js -->
-    {{!--
-    <script src="/socket.io/socket.io.js"></script> --}}
-    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-    <script>
-        const socket = io();
-        $(document).ready(function () {
-            // Xử lý gửi tin nhắn
-            $('#chat-form').submit(function (e) {
-                e.preventDefault();
-                var messageText = $('#message-input').val().trim();
+<!-- websocket.io.js -->
+{{!--
+<script src="/socket.io/socket.io.js"></script> --}}
+<script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+<script>
+    const socket = io();
+    $(document).ready(function () {
+        // Xử lý gửi tin nhắn
+        $('#chat-form').submit(function (e) {
+            e.preventDefault();
+            var messageText = $('#message-input').val().trim();
 
-                if (messageText !== '') {
-                    // Thêm tin nhắn vào khung chat
-                    socket.emit("sendMessage", { username: "{{existingUser.name}}", message: messageText, })
-                    $('#message-input').val('');
+            if (messageText !== '') {
+                // Thêm tin nhắn vào khung chat
+                socket.emit("sendMessage", {
+                    username: "{{existingUser.name}}",
+                    from: "{{existingUser._id}}",
+                    to: "{{user._id}}",
+                    content: messageText,
+                    message: messageText,
+                })
+                $('#message-input').val('');
 
-                }
-            });
-        });
-        socket.on("chatMessage", (data) => {
-            var newMessage = '';
-            if (data.username === "{{existingUser.name}}") {
-                newMessage = '<div class="message message-sent">' +
-                    '<div class="message-text">' + data.message + '</div>' +
-                    '<div class="message-time">10:03 AM - ' + data.username + '</div>' +
-                    '</div>';
-            } else {
-                newMessage = '<div class="message message-received">' +
-                    '<div class="message-text">' + data.message + '</div>' +
-                    '<div class="message-time">10:03 AM - ' + data.username + '</div>' +
-                    '</div>';
             }
-            $('#chat-messages').append(newMessage);
-            console.log(data);
-            $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
-        })
-    </script>
+        });
+    });
+    socket.on("chatMessage", (data) => {
+        var newMessage = '';
+        if (data.username === "{{existingUser.name}}") {
+            newMessage = '<div class="message message-sent">' +
+                '<div class="message-text">' + data.message + '</div>' +
+                '<div class="message-time">10:03 AM - ' + data.username + '</div>' +
+                '</div>';
+        } else {
+            newMessage = '<div class="message message-received">' +
+                '<div class="message-text">' + data.message + '</div>' +
+                '<div class="message-time">10:03 AM - ' + data.username + '</div>' +
+                '</div>';
+        }
+        $('#chat-messages').append(newMessage);
+        console.log(data);
+        $('#chat-messages').scrollTop($('#chat-messages')[0].scrollHeight);
+    })
+</script>
