cập nhật phần hộp thư/nhắn tin - hiển thị các cuộc trò chuyện với các người dùng khác

--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -220,7 +220,7 @@
 
                                     <div class="feed-element">
                                         <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/image/logo">
+                                            <img alt="image" class="img-circle" src="/image/logo.jpg">
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">2h ago</small>
@@ -231,7 +231,7 @@
                                     </div>
                                     <div class="feed-element">
                                         <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/image/logo">
+                                            <img alt="image" class="img-circle" src="/image/logo.jpg">
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">2h ago</small>
@@ -242,7 +242,7 @@
                                     </div>
                                     <div class="feed-element">
                                         <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/image/logo">
+                                            <img alt="image" class="img-circle" src="/image/logo.jpg">
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right text-navy">5h ago</small>
@@ -259,7 +259,7 @@
                                     </div>
                                     <div class="feed-element">
                                         <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/image/logo">
+                                            <img alt="image" class="img-circle" src="/image/logo.jpg">
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">2h ago</small>
@@ -291,7 +291,7 @@
                                     </div>
                                     <div class="feed-element">
                                         <a href="profile.html" class="pull-left">
-                                            <img alt="image" class="img-circle" src="/image/logo">
+                                            <img alt="image" class="img-circle" src="/image/logo.jpg">
                                         </a>
                                         <div class="media-body ">
                                             <small class="pull-right">46h ago</small>
