--- a/src/resources/views/chat.hbs
+++ b/src/resources/views/chat.hbs
@@ -65,7 +65,7 @@
 
 <body>
     <div class=" col-lg-12">
-        <div class="chat-container">
+        <div class="chat-container" id="chat-container">
             <div class="chat-header">
                 <h4 class="text-center">Trò chuyện với <strong>{{user.name}}</strong></h4>
             </div>
@@ -110,6 +110,18 @@
 {{!--
 <script src="/socket.io/socket.io.js"></script> --}}
 <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+<script>
+    //cho phép cuộn trang xuống cuối dể hiển thị tin nhắn mới nhất
+    document.addEventListener("DOMContentLoaded", function () {
+        const chatContainer = document.getElementById("chat-messages");
+        if (chatContainer) {
+            chatContainer.scrollTo({
+                top: chatContainer.scrollHeight,
+                behavior: 'smooth' // Thêm hiệu ứng cuộn mượt
+            });
+        }
+    });
+</script>
 <script>
     const socket = io();
 
