--- a/src/resources/views/message.hbs
+++ b/src/resources/views/message.hbs
@@ -5,19 +5,7 @@
 
                 <div class="wrapper wrapper-content">
                     <div class="row">
-                        <div class="col-lg-3">
-                            <div class="ibox float-e-margins">
-                                <div class="ibox-content mailbox-content">
-                                    <div class="file-manager">
-                                        <a class="btn btn-block btn-primary compose-mail"
-                                            href="/mailbox/mail_compose">Soạn
-                                            tin nhắn</a>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-9 animated fadeInRight">
+                        <div class="col-lg-12 animated fadeInRight">
                             <div class="mail-box-header">
                                 <form method="get" action="index.html" class="pull-right mail-search">
                                     <div class="input-group">
@@ -42,10 +30,6 @@
                                     <button class="btn btn-white btn-sm" onclick="location.reload()"><i
                                             class="fa fa-refresh"></i>
                                         Refresh</button>
-                                    {{!-- <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top"
-                                        title="Mark as read"><i class="fa fa-eye"></i> </button>
-                                    <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top"
-                                        title="Mark as important"><i class="fa fa-exclamation"></i> </button> --}}
                                     <button class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top"
                                         title="Move to trash"><i class="fa fa-trash-o"></i> </button>
                                 </div>
@@ -53,6 +37,8 @@
                             <div class="mail-box">
                                 <table class="table table-hover table-mail">
                                     <tbody>
+                                        {{#each conversations}}
+
                                         <tr class="unread">
                                             <td class="check-mail">
                                                 <div class="icheckbox_square-green" style="position: relative;"><input
@@ -62,13 +48,16 @@
                                                         style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
                                                 </div>
                                             </td>
-                                            <td class="mail-ontact"><a href="mail_detail.html">Anna Smith</a></td>
-                                            <td class="mail-subject"><a href="mail_detail.html">Lorem ipsum dolor
-                                                    noretek imit set.</a></td>
+                                            <td class="mail-ontact"><a
+                                                    href="/mailbox/chat/{{this.partner._id}}">{{this.partner.name}}</a>
+                                            </td>
+                                            <td class="mail-subject"><a href="mail_detail.html">{{this.content}}</a>
+                                            </td>
                                             <td class=""><i class="fa fa-paperclip"></i></td>
-                                            <td class="text-right mail-date">6.10 AM</td>
+                                            <td class="text-right mail-date">{{formatDateTime this.createdAt}}</td>
                                         </tr>
-                                        <tr class="unread">
+                                        {{/each}}
+                                        {{!-- <tr class="unread">
                                             <td class="check-mail">
                                             </td>
                                             <td class="mail-ontact"><a href="mail_detail.html">Jack Nowak</a></td>
@@ -107,7 +96,7 @@
                                                     variations of passages of Lorem Ipsum.</a></td>
                                             <td class=""></td>
                                             <td class="text-right mail-date">Mar 22</td>
-                                        </tr>
+                                        </tr> --}}
                                     </tbody>
                                 </table>
                             </div>
@@ -126,3 +115,4 @@
             </div>
         </div>
 </body>
+
