cập nhật lại view trang chủ và thêm schema phục vụ việc post bài đăng trên trang chủ

--- a/src/resources/views/form_profile.hbs
+++ b/src/resources/views/form_profile.hbs
@@ -90,8 +90,8 @@
 
                                         <div class="ibox">
                                             <div class="ibox-content">
-                                                <h2>Lịch sử sửa thông tin (chưa cập nhật) </h2>
-                                                <table class="table table-stripped small m-t-md">
+                                                <h2>Lịch sử sửa thông tin</h2>
+                                                {{!-- <table class="table table-stripped small m-t-md">
                                                     <tbody>
                                                         <tr>
                                                             <td class="no-borders">
@@ -121,7 +121,7 @@
                                                             </td>
                                                         </tr>
                                                     </tbody>
-                                                </table>
+                                                </table> --}}
                                             </div>
                                         </div>
                                     </div>
