--- a/src/resources/views/personnel_edit.hbs
+++ b/src/resources/views/personnel_edit.hbs
@@ -97,7 +97,7 @@
                                         <div class="ibox">
                                             <div class="ibox-content">
                                                 <h2>Lịch sử sửa thông tin (chưa cập nhật) </h2>
-                                                <table class="table table-stripped small m-t-md">
+                                                {{!-- <table class="table table-stripped small m-t-md">
                                                     <tbody>
                                                         <tr>
                                                             <td class="no-borders">
@@ -127,7 +127,7 @@
                                                             </td>
                                                         </tr>
                                                     </tbody>
-                                                </table>
+                                                </table> --}}
                                             </div>
                                         </div>
                                     </div>
