--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -1,131 +1,141 @@
 <div class="row  border-bottom white-bg dashboard-header">
-    <div class="col-sm-3">
+    <div class="col-sm-9">
         <h2>Xin chào: {{existingUser.name}} !</h2>
         <small>You have 42 messages and 6 notifications.</small>
-        <ul class="list-group clear-list m-t">
-            <li class="list-group-item fist-item">
-                <span class="pull-right">
-                    09:00 pm
-                </span>
-                <span class="label label-success">1</span> Please contact me
-            </li>
-            <li class="list-group-item">
-                <span class="pull-right">
-                    10:16 am
-                </span>
-                <span class="label label-info">2</span> Sign a contract
-            </li>
-            <li class="list-group-item">
-                <span class="pull-right">
-                    08:22 pm
-                </span>
-                <span class="label label-primary">3</span> Open new shop
-            </li>
-            <li class="list-group-item">
-                <span class="pull-right">
-                    11:06 pm
-                </span>
-                <span class="label label-default">4</span> Call back to Sylvia
-            </li>
-            <li class="list-group-item">
-                <span class="pull-right">
-                    12:00 am
-                </span>
-                <span class="label label-primary">5</span> Write a letter to Sandra
-            </li>
-        </ul>
-    </div>
-    <div class="col-sm-6">
-        <div class="flot-chart dashboard-chart">
-            <div class="flot-chart-content" id="flot-dashboard-chart"></div>
-        </div>
-        <div class="row text-left">
-            <div class="col-xs-4">
-                <div class=" m-l-md">
-                    <span class="h4 font-bold m-t block">$ 406,100</span>
-                    <small class="text-muted m-b block">Sales marketing report</small>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <span class="h4 font-bold m-t block">$ 150,401</span>
-                <small class="text-muted m-b block">Annual sales revenue</small>
-            </div>
-            <div class="col-xs-4">
-                <span class="h4 font-bold m-t block">$ 16,822</span>
-                <small class="text-muted m-b block">Half-year revenue margin</small>
-            </div>
 
-        </div>
     </div>
     <div class="col-sm-3">
-        <div class="statistic-box">
-            <h4>
-                Project Beta progress
-            </h4>
-            <p>
-                You have two project with not compleated task.
-            </p>
-            <div class="row text-center">
-                <div class="col-lg-6">
-                    <canvas id="polarChart" width="80" height="80"></canvas>
-                    <h5>Kolter</h5>
-                </div>
-                <div class="col-lg-6">
-                    <canvas id="doughnutChart" width="78" height="78"></canvas>
-                    <h5>Maxtor</h5>
-                </div>
-            </div>
-            <div class="m-t">
-                <small>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</small>
-            </div>
-
+        <div>
+            <button type="submit" class="btn btn-primary  block full-width">
+                <i class="ri-add-line"></i> Tạo bài viết
+            </button>
         </div>
     </div>
-
 </div>
 <div class="row">
     <div class="col-lg-12">
         <div class="wrapper wrapper-content">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-title">
-                            <h5>New data for the report</h5> <span class="label label-primary">HUGI</span>
-                            <div class="ibox-tools">
-                                <a class="collapse-link">
-                                    <i class="fa fa-chevron-up"></i>
-                                </a>
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <i class="fa fa-wrench"></i>
-                                </a>
-                                <ul class="dropdown-menu dropdown-user">
-                                    <li><a href="#">Config option 1</a>
-                                    </li>
-                                    <li><a href="#">Config option 2</a>
-                                    </li>
-                                </ul>
-                                <a class="close-link">
-                                    <i class="fa fa-times"></i>
-                                </a>
-                            </div>
+                            <h5>Bản tin HUGI</h5> <span class="label label-primary">HUGI</span>
                         </div>
-                        <div class="ibox-content">
-                            <div>
-
-                                <div class="pull-right text-right">
-
-                                    <span
-                                        class="bar_dashboard">5,3,9,6,5,9,7,3,5,2,4,7,3,2,7,9,6,4,5,7,3,2,1,0,9,5,6,8,3,2,1</span>
-                                    <br />
-                                    <small class="font-bold">$ 20 054.43</small>
+                        {{!-- foreach --}}
+                        <div class="col-lg-12" style="background-color: #ffffff;">
+                            <div class="social-feed-box">
+                                <div class="pull-right social-action dropdown">
+                                    <button data-toggle="dropdown" class="dropdown-toggle btn-white">
+                                        <i class="fa fa-angle-down"></i>
+                                    </button>
+                                    <ul class="dropdown-menu m-t-xs">
+                                        <li><a href="#">Config</a></li>
+                                    </ul>
                                 </div>
-                                <h4>NYS report new data!
-                                    <br />
-                                    <small class="m-r"><a href="graph_flot.html"> Check the stock price! </a>
-                                    </small>
-                                </h4>
+                                <div class="social-avatar">
+                                    <a href="" class="pull-left">
+                                        <img alt="image" src="http://localhost:3000/uploads/1756796390905_HUAN0297.jpg">
+                                    </a>
+                                    <div class="media-body">
+                                        <a href="#">
+                                            Nguyễn Đình Minh Khánh
+                                        </a>
+                                        <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+                                    </div>
+                                </div>
+                                <div class="social-body pb">
+                                    <p>
+                                        Many desktop publishing packages and web page editors now use Lorem Ipsum as
+                                        their
+                                        default model text, and a search for 'lorem ipsum' will uncover many web sites
+                                        still
+                                        in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                                        default model text.
+                                    </p>
+                                    <p>
+                                        Lorem Ipsum as their
+                                        default model text, and a search for 'lorem ipsum' will uncover many web sites
+                                        still
+                                        in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                                        default model text.
+                                    </p>
+                                    <img src="http://localhost:3000/uploads/1756796390905_HUAN0297.jpg"
+                                        class="img-responsive">
+                                    <div class="btn-group">
+                                        <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i>100</button>
+                                        <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i>20</button>
+                                        <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> 1</button>
+                                    </div>
+                                </div>
+                                <div class="social-footer">
+                                    <div class="social-comment">
+                                        <a href="" class="pull-left">
+                                            <img alt="image" src="img/a1.jpg">
+                                        </a>
+                                        <div class="media-body">
+                                            <a href="#">
+                                                Andrew Williams
+                                            </a>
+                                            Internet tend to repeat predefined chunks as necessary, making this the
+                                            first true generator on the Internet. It uses a dictionary of over 200 Latin
+                                            words.
+                                            <br />
+                                            <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 26 Like this!</a>
+                                            -
+                                            <small class="text-muted">12.06.2014</small>
+                                        </div>
+                                    </div>
+
+                                    <div class="social-comment">
+                                        <a href="" class="pull-left">
+                                            <img alt="image"
+                                                src="http://localhost:3000/uploads/1753606533612_cottages-in-the-middle-of-beach-753626.jpg">
+                                        </a>
+                                        <div class="media-body">
+                                            <a href="#">
+                                                Andrew Williams
+                                            </a>
+                                            Making this the first true generator on the Internet. It uses a dictionary
+                                            of.
+                                            <br />
+                                            <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a>
+                                            -
+                                            <small class="text-muted">10.07.2014</small>
+                                        </div>
+                                    </div>
+
+                                    <div class="social-comment">
+                                        <a href="" class="pull-left">
+                                            <img alt="image" src="img/a8.jpg">
+                                        </a>
+                                        <div class="media-body">
+                                            <a href="#">
+                                                Andrew Williams
+                                            </a>
+                                            Making this the first true generator on the Internet. It uses a dictionary
+                                            of.
+                                            <br />
+                                            <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a>
+                                            -
+                                            <small class="text-muted">10.07.2014</small>
+                                        </div>
+                                    </div>
+
+                                    <div class="social-comment">
+                                        <a href="" class="pull-left">
+                                            <img alt="image" src="img/a3.jpg">
+                                        </a>
+                                        <form method="GET" action="" class="media-body">
+                                            <label style="display: flex;">
+                                                <textarea class="form-control"  placeholder="Viết comment..."></textarea>
+                                                <button type="submit" class="btn btn-sm btn-primary">Comment</button>
+                                            </label>
+                                        </form>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        {{!-- endforeach --}}
                     </div>
                     <div class="ibox float-e-margins">
                         <div class="ibox-title">
