--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -30,6 +30,7 @@
                         <li><a href="/profile">Hồ sơ</a></li>
                         <li><a href="/mailbox/contact">Kết Nối</a></li>
                         <li><a href="/mailbox">Hộp thư</a></li>
+                        <li><a href="/mypost/{{existingUser._id}}">Bài viết của tôi</a></li>
                     </ul>
                     {{/if}}
                 </div>
